crates/swc_ecma_parser/tests/flow/type_guards/invalid/keyword_as_param_2.js
type T = (in_: any) => implies in is number;
